// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders IncomingActions without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-button-group rcx-button-group--align-start rcx-button-group--large"
      role="group"
    >
      <button
        aria-label="Decline"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary-danger rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="Decline"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Turn_off_microphone"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        disabled=""
        title="Turn_off_microphone"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-mic-off rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Open_Dialpad"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        disabled=""
        title="Open_Dialpad"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-dialpad rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Transfer_call"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        disabled=""
        title="Transfer_call"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-arrow-forward rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Accept"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary-success rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="Accept"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-phone rcx-icon"
        >
          
        </i>
      </button>
    </div>
  </div>
</body>
`;

exports[`renders OngoingActions without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-button-group rcx-button-group--align-start rcx-button-group--large"
      role="group"
    >
      <button
        aria-label="Turn_off_microphone"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="Turn_off_microphone"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-mic-off rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Hold"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="Hold"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-pause-shape-unfilled rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Open_Dialpad"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="Open_Dialpad"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-dialpad rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Transfer_call"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="Transfer_call"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-arrow-forward rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="End_call"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary-danger rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="End_call"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon"
        >
          
        </i>
      </button>
    </div>
  </div>
</body>
`;

exports[`renders OutgoingActions without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-button-group rcx-button-group--align-start rcx-button-group--large"
      role="group"
    >
      <button
        aria-label="Turn_off_microphone"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        disabled=""
        title="Turn_off_microphone"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-mic-off rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Hold"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        disabled=""
        title="Hold"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-pause-shape-unfilled rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Open_Dialpad"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        disabled=""
        title="Open_Dialpad"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-dialpad rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="Transfer_call"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        disabled=""
        title="Transfer_call"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-arrow-forward rcx-icon"
        >
          
        </i>
      </button>
      <button
        aria-label="End_call"
        class="rcx-box rcx-box--full rcx-button--medium-square rcx-button--icon-secondary-danger rcx-button--square rcx-button--icon rcx-button rcx-button-group__item"
        title="End_call"
        type="button"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-phone-off rcx-icon"
        >
          
        </i>
      </button>
    </div>
  </div>
</body>
`;
